A seperate build folder for unity will be created within the main build folder to seperate compilation files. Made file paths within makefile not end with /.

--- a/example/Makefile
+++ b/example/Makefile
@@ -1,5 +1,9 @@
-PATHS = src/
-PATHT = test/
-PATHB = build/
+PATHS = src
+PATHT = test
+BUILD_DIR = build
 
 include ../Makefile
+
+.PHONY: clean
+clean:
+	rm -r build
